--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
       body { margin: 0; }
       canvas { width: 100%; height: 100% }
     </style>
-    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body style="background-image: url('/images/space-texture.jpg')">
     <script>
@@ -151,12 +150,6 @@
         </tr>
       </table>
     </div>
-    <script src="dist/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
-
-
-
-
-
-
